<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shadow_rect"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/task_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_list_name"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/task_list_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_task_count"
            android:textColor="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_elem_full_price"
                android:textColor="@color/green"/>

            <TextView
                android:id="@+id/task_list_summary_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_list_price"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zloty_value"
                android:textColor="@color/green"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/task_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_list_id"
        android:textColor="@color/green"
        android:visibility="gone"/>

</LinearLayout>