<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="@color/black"></com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/parent_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_regular"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.052" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_task_explain_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="18dp"
        android:contentDescription="@string/add_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_outline_edit_24"
        app:fabCustomSize="62dp"
        style="?attr/floatingActionButtonSurfaceStyle"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/task_box_price_summary"
        style="@style/Widget.Material3.Chip.Suggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:checked="true"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.976" />

    <LinearLayout
        android:id="@+id/task_create_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6252323"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/add_new_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColorHint="#B8AEAE"
            android:hint="@string/new_task_product_name"
            app:layout_constraintBottom_toBottomOf="@+id/task_create_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.071"
            android:padding="15dp"
            android:background="@drawable/input_background"
            android:autofillHints="@string/new_task_product_name" />

        <EditText
        android:id="@+id/add_new_task_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColorHint="#B8AEAE"
        android:hint="@string/new_task_product_price"
        app:layout_constraintBottom_toBottomOf="@+id/add_new_task_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintVertical_bias="0.071"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_background"
        android:autofillHints="@string/new_task_product_name" />

        <Button
            android:id="@+id/create_new_task_button_in_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/add_new_task_price"
            android:text="@string/add_new_task_button_text"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_price_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6252323"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="gone"
        >

        <EditText
            android:id="@+id/change_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="#B8AEAE"
            android:hint="@string/task_salary"
            app:layout_constraintBottom_toBottomOf="@+id/task_create_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.071"
            android:padding="15dp"
            android:background="@drawable/input_background"
            android:autofillHints="@string/task_salary" />

        <Button
            android:id="@+id/change_price_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/add_new_task_price"
            android:text="@string/add_new_task_button_text"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/close_salary_change_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/add_new_task_price"
            android:text="@string/close"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>